Adjust some spacing issues

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -31,6 +31,10 @@ a:hover {
   color: #f3d250;
 }
 
+.heading {
+  margin: 40px 0;
+}
+
 /* Header rules */
 #site-header {
   padding: 30px 0;
@@ -45,7 +49,6 @@ a:hover {
 main .home.container {
   display: flex;
   justify-content: center;
-  padding: 50px 0;
 }
 
 /* Cat pages rules */
@@ -54,13 +57,14 @@ main .cat.container {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 50px 0;
 }
 main .cat.container .image {
-  max-width: 500px;
+  max-width: 400px;
+  margin: 10px 0;
 }
 main .cat.container .image img {
   max-width: 100%;
+  border-radius: 10px;
 }
 
 /* Footer rules */
@@ -70,4 +74,9 @@ main .cat.container .image img {
   width: 100%;
   background-color: #ececec;
   padding: 30px 0;
+}
+#site-footer .container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
