--- a/resources/sass/partials/_cat.scss
+++ b/resources/sass/partials/_cat.scss
@@ -6,13 +6,14 @@ main {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        padding: 50px 0;
-
+        
         .image {
-            max-width: 500px;
+            max-width: 400px;
+            margin: 10px 0;
 
             img {
                 max-width: 100%;
+                border-radius: 10px;
             }
         }
     }
