--- a/resources/sass/partials/_common.scss
+++ b/resources/sass/partials/_common.scss
@@ -32,3 +32,7 @@ a {
         color: $theme-color-3;
     }
 }
+
+.heading {
+    margin: 40px 0;
+}
