--- a/resources/sass/partials/_footer.scss
+++ b/resources/sass/partials/_footer.scss
@@ -6,4 +6,10 @@
     width: 100%;
     background-color: $theme-color-1;
     padding: 30px 0;
+    
+    .container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
