--- a/resources/sass/partials/_home.scss
+++ b/resources/sass/partials/_home.scss
@@ -4,6 +4,5 @@ main {
     .home.container {
         display: flex;
         justify-content: center;
-        padding: 50px 0;
     }
 }
